backend/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
      - name: backend
        image: hack4laengage/engage_backend_service
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "250m"
            memory: "1024Mi"
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
